# docs/swagger.yaml
@@ -321,6 +321,35 @@ paths:
       summary: возвращает лист из инвайтов
       tags:
       - admin
+  /admin/scan:
+    get:
+      consumes:
+      - application/json
+      description: запускает сканирование книг
+      parameters:
+      - description: Just token without bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Result'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: запускает сканирование книг
+      tags:
+      - admin
   /admin/user:
     post:
       consumes:
